syntax = "proto2";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "it.pagopa.pdnd.interop.uservice.partymanagement.model.persistence.serializer.v1"
};

message PartyRelationshipV1 {
  required string id = 1;
  required string from = 2;
  required string to = 3;
  required PartyRoleV1 role = 4;
  repeated string products = 5;
  required string productRole = 6;
  required string start = 7;
  optional string end = 8;
  required PartyRelationshipStatusV1 status = 9;
  optional string filePath = 10;
  optional string fileName = 11;
  optional string contentType = 12;

  enum PartyRelationshipStatusV1 {
    RELATIONSHIP_STATUS_PENDING = 1;
    RELATIONSHIP_STATUS_ACTIVE = 2;
    RELATIONSHIP_STATUS_SUSPENDED = 3;
    RELATIONSHIP_STATUS_DELETED = 4;
    RELATIONSHIP_STATUS_REJECTED = 5;
  }

  enum PartyRoleV1 {
    PARTY_ROLE_DELEGATE = 1;
    PARTY_ROLE_MANAGER = 2;
    PARTY_ROLE_OPERATOR = 3;
  }
}

