syntax = "proto2";

import "scalapb/scalapb.proto";
import "v1/relationship.proto";

option (scalapb.options) = {
  package_name: "it.pagopa.pdnd.interop.uservice.partymanagement.model.persistence.serializer.v1"
};

message TokenV1 {
  required string id = 1;
  repeated PartyRelationshipIdV1 legals = 2;
  required string validity = 3;
  required string seed = 4;
  required string checksum = 5;

}
